<resources>
    <string name="item_title_placeholder">Item Title</string>
    <string name="text_content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="text_long_content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <!-- image descriptions -->
    <string name="group_window_back_button_desc">Group window back button</string>
    <string name="group_window_more_button">Group window more button</string>
    <string name="chat_picture_desc">Chat picture</string>
    <string name="group_profile_picture_desc">Group profile picture</string>
    <string name="user_profile_picture_desc">User profile picture</string>
    <string name="last_poster_profile_pic_desc">Last poster profile pic</string>
    <string name="group_participant_profile_pic_desc">Group participant profile pic</string>
    <string name="more_button_desc">More settings</string>
    <string name="chat_window_new_event_button_desc">Chat window new event button</string>
    <string name="chat_take_photo_desc">Take a photo</string>
    <string name="chat_upload_photo_desc">Upload a picture</string>
    <string name="chat_record_voice_desc">Record voice</string>
    <string name="chat_emoji_desc">Emoji</string>
    <string name="chat_list_search_desc">Search</string>
    <string name="last_time_posted_icon_desc">Last time posted icon</string>
    <string name="post_content_image_desc">Post content image</string>
    <string name="upvote_button_desc">Upvote button</string>
    <string name="down_vote_button_desc">Down vote button</string>
    <string name="comment_button_desc">Comment button</string>
    <string name="share_button_desc">Share button</string>
    <string name="sort_by_button_desc">Sort by</string>
    <string name="reply_button_desc">Reply button</string>
    <string name="user_activity_status_desc">User activity status</string>
    <string name="group_background_picture_desc">Group background picture</string>
    <string name="event_participation_icon_desc">Event participation icon</string>
    <string name="failed_to_add_contact_desc">Failed to add contact</string>
    <string name="remove_element_desc">remove element</string>
    <string name="user_post_media_desc">User post media</string>
    <string name="post_media_preview_desc">Post media preview</string>
    <string name="user_profile_background_picture_desc">User profile background picture</string>
    <string name="edit_profile_picture_desc">Edit user profile picture</string>
    <string name="create_new_post_desc">Create new post</string>
    <string name="close_dialog_desc">Close dialog</string>

    <!-- titles -->
    <string name="group_title">Group name</string>
    <string name="chat_title">Chat name</string>
    <string name="page_title">Title</string>
    <string name="page_subtitle">Subtitle</string>
    <string name="chat_history_title">Messages</string>
    <string name="group_list_title">Communities</string>
    <string name="event_title">Event name</string>
    <string name="channel_title">Channel</string>
    <string name="contacts_title">Contacts</string>
    <string name="chat_participants_title">Chat participants</string>
    <string name="new_message_title">New Message</string>
    <string name="edit_profile_title">Edit profile</string>
    <string name="edit_group_title">Edit group</string>
    <string name="create_post_title">Create post</string>
    <string name="edit_post_title">Edit post</string>
    <string name="edit_comment_title">Edit comment</string>

    <!-- event -->
    <string name="event_participation_placeholder">Going</string>
    <string name="extra_participants_placeholder">+13</string>

    <!-- icons -->
    <string name="profile_icon_label">Profile</string>
    <string name="more_icon_label">More</string>
    <string name="help_icon_label">Help</string>
    <string name="chat_icon_label">Chat</string>
    <string name="community_icon_label">Community</string>
    <string name="discover_icon_label">Discover</string>
    <string name="event_label">Events</string>
    <string name="new_message_icon_label">New Message</string>
    <string name="share_label">Share</string>
    <string name="reply_label">Reply</string>
    <string name="feed_tab_label">Feed</string>
    <string name="channels_tab_label">Channels</string>
    <string name="groups_tab_label">Groups</string>
    <string name="search_label">Search</string>
    <string name="posts_label">Posts</string>
    <string name="post_notifications_on_label">Turn on notifications for this post</string>
    <string name="post_sticky_label">Sticky this post</string>
    <string name="post_edit_label">Edit this post</string>
    <string name="post_remove_label">Remove this post</string>

    <!-- main activity menus -->
    <string name="take_photo">Take a photo</string>
    <string name="select_photo">Pick a photo from your gallery</string>

    <!-- misc labels -->
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>

    <!-- PLACEHOLDERS -->
    <!-- user post -->
    <string name="count_placeholder">125K</string>
    <string name="last_updated_placeholder">5 min</string>
    <string name="follower_count_placeholder">126,458 followers</string>
    <string name="event_time_placeholder">Tomorrow - 6:30 PM</string>
    <!-- user login -->
    <string name="char_search_hint">Search</string>
    <string name="login_id_hint">Username or email</string>
    <string name="login_password_hint">Password</string>

    <!--User login/creation -->
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="username_hint">Username</string>
    <string name="date_day_hint">DD</string>
    <string name="date_month_hint">MM</string>
    <string name="date_year_hint">YY</string>
    <string name="date_of_birth_label">Date of birth:</string>
    <string name="male_radio">Male</string>
    <string name="female_radio">Female</string>
    <string name="cant_log_in">Can\'t Log In ?</string>

    <!-- user navigation drawer -->
    <string name="drawer_my_profile">My profile</string>
    <string name="drawer_recent_posts">Recent</string>
    <string name="drawer_draft_posts">Drafts</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- contacts -->
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="sent">Request sent</string>
    <string name="search_sent">Sent</string>

    <!-- chat -->
    <string name="chat_item_author_me">You</string>
    <string name="chat_notification">Chat notification</string>
    <string name="chat_input_hint">Message</string>
    <string name="chat_window_last_active_placeholder">Active 5m ago</string>
    <string name="no_results">No results</string>
    <string name="next_label">Next</string>
    <string name="previous_label">Previous</string>
    <string name="chat_name">Name (Optional)</string>
    <string name="notification_reply_label">Answer : </string>
    <string name="notification_reply_icon_title">Reply</string>

    <!-- alert -->
    <string name="remove_contact_alert">Delete contact</string>
    <string name="discard_changes_alert">Discard changes</string>
    <string name="remove_post_alert">Remove post</string>
    <string name="remove_comment_alert">Remove comment</string>
    <string name="discard_changes_alert_label">Discard</string>
    <string name="remove_post_alert_label">Delete</string>
    <string name="remove_contact_alert_message">Are you sure you want to remove this contact from your list?</string>
    <string name="remove_post_alert_message">Are you sure you want to delete this post from the group?</string>
    <string name="remove_comment_alert_message">Are you sure you want to delete this comment?</string>
    <string name="discard_changes_alert_message">Are you sure you want to discard your changes?</string>

    <!-- group -->
    <string name="default_group_name">Group chat</string>
    <string name="group_name_hint">Group name</string>
    <string name="group_description_hint">Group description</string>

    <!-- User information -->
    <string name="age_label">Age</string>
    <string name="gender_label">Gender</string>
    <string name="about_me_title">About me</string>

    <!-- Post -->
    <string name="post_content_hint">Post content</string>
    <string name="comment_content_hint">Comment content</string>
    <string name="post_submit">Create</string>
    <string name="comment_submit">Reply</string>


    <!-- User profile edit -->

    <!-- Empty recycler view message -->
    <string name="no_posts">No Posts Found</string>
    <string name="no_comments">No Comments Found</string>
    <string name="no_chats">No Chats Found</string>
    <string name="no_contacts">No Contacts Found</string>

</resources>