<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/user_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_item_my_profile"
            android:icon="@drawable/ic_top_nav_profile"
            android:title="@string/drawer_my_profile"></item>
        <item
            android:id="@+id/menu_item_recent_posts"
            android:icon="@drawable/ic_recent"
            android:title="@string/drawer_recent_posts"></item>
        <item
            android:id="@+id/menu_item_drafts"
            android:icon="@drawable/ic_draft_posts"
            android:title="@string/drawer_draft_posts"></item>
    </group>
    <group>
        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"></item>
        <item
            android:id="@+id/menu_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"></item>
    </group>
</menu>