<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discover"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_discover"
        android:title="@string/discover_icon_label" />
    <item
        android:id="@+id/community"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_community"
        android:title="@string/community_icon_label" />
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_chat"
        android:title="@string/chat_icon_label" />
    <item
        android:id="@+id/events"
        android:enabled="true"
        android:icon="@drawable/ic_events"
        android:title="@string/event_label" />
</menu>