<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="property"
            type="com.example.mykotlinapp.model.dto.ui.group.GroupEventItemDTO" />

        <variable
            name="listener"
            type="com.example.mykotlinapp.ui.components.recycler_view.ClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> listener.onClick(property)}">

        <ImageView
            android:id="@+id/event_profile_pic"
            android:layout_width="@dimen/chat_item_pic_size"
            android:layout_height="@dimen/chat_item_pic_size"
            android:layout_marginStart="@dimen/big_spacing"
            android:layout_marginTop="@dimen/big_spacing"
            android:contentDescription="@string/group_profile_picture_desc"
            app:circleImgUrl="@{property.eventPicture}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/event_name"
            style="@style/ChatItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/event_profile_pic"
            android:layout_toEndOf="@id/event_profile_pic"
            android:text="@{property.eventName}"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/event_title" />

        <TextView
            android:id="@+id/event_summary"
            style="@style/ChatItemCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_name"
            android:layout_alignStart="@id/event_name"
            android:layout_marginTop="@dimen/very_small_spacing"
            android:includeFontPadding="false"
            android:text="@{property.eventSummary}"
            tools:text="@string/text_content_placeholder" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_participant_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_summary"
            android:layout_alignStart="@id/event_name"
            android:layout_marginTop="@dimen/standard_spacing"
            android:layout_marginBottom="@dimen/big_spacing"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:listData="@{property.participants}"
            tools:itemCount="@integer/group_participant_count_to_display"
            tools:listitem="@layout/item_participant" />

        <androidx.cardview.widget.CardView
            android:id="@+id/extra_participants_card_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/event_participant_pic_size"
            android:layout_alignTop="@id/event_participant_list"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_toEndOf="@id/event_participant_list"
            app:cardCornerRadius="@dimen/picture_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:includeFontPadding="false"
                android:paddingStart="@dimen/very_small_spacing"
                android:paddingEnd="@dimen/very_small_spacing"
                android:text="@{`+` + property.extraParticipantCount}"
                android:textSize="@dimen/text_size_small"
                tools:text="@string/extra_participants_placeholder" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/event_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:text="@{property.eventTime}"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic|bold"
            tools:text="@string/event_time_placeholder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/event_participant_list"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/standard_spacing">

            <ImageView
                android:id="@+id/event_participation_icon"
                android:layout_width="@dimen/events_join_state_icon_size"
                android:layout_height="@dimen/events_join_state_icon_size"
                android:contentDescription="@string/event_participation_icon_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@drawable/ic_event_joined" />

            <TextView
                android:id="@+id/event_participation_status"
                style="@style/ChatItemCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_spacing"
                android:includeFontPadding="false"
                android:text="@{property.joinState.label}"
                app:layout_constraintBottom_toBottomOf="@+id/event_participation_icon"
                app:layout_constraintEnd_toStartOf="@id/event_participation_icon"
                app:layout_constraintTop_toTopOf="@+id/event_participation_icon"
                tools:text="@string/event_participation_placeholder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/component_hr_line" />

    </RelativeLayout>


</layout>